# signal-foundry

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/screener/: cli.py  config.py  evidence.py  io.py  mcp_server.py  models.py  pipeline.py  rationale.py  reporting.py  scoring.py
src/screener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/screener/providers/: __init__.py  base.py  fmp.py  fred.py  live_snapshot.py  sec.py
src/screener/templates/: dashboard.html.j2  report.html.j2
tests/: test_artifact_modes.py  test_cli.py  test_live_pipeline.py  test_live_snapshot.py  test_mcp_server.py  test_pipeline.py  test_reporting.py
tests/fixtures/: base_snapshot.json
